tests/expectations/compiler/finalize/increment_fail.out
Error [ETYC0372005]: Unknown function `test.aleo/increment`
    --> compiler-test:11:5
     |
  11 |     increment(amounts, addr, amount);
     |     ^^^^^^^^^
